<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back Space</string>
    <string name="Btn_1">1</string>
    <string name="Btn_2">2</string>
    <string name="Btn_3">3</string>
    <string name="Btn_4">4</string>
    <string name="Btn_5">5</string>
    <string name="Btn_6">6</string>
    <string name="Btn_7">7</string>
    <string name="Btn_8">8</string>
    <string name="Btn_9">9</string>
    <string name="Btn_0">0</string>
    <string name="multi">×</string>
    <string name="divition">÷</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="result">=</string>
</resources>
